# llm-order-dependency

./: .gitignore  README.md  pyproject.toml
data/: mcq-1000.csv  mcq-gpt-35-turbo.csv  mcq-gpt-4o-mini.csv
src/: _dirs.py  test.py  test_analyze.ipynb  test_analyze.py  test_prompt.py
src/data/: _dirs.py  data-process.py  data.py
src/lib/: process.py
